// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer component Drawer rendered correctly 1`] = `
<Drawer
  actions="actions"
  footer={<span />}
>
  <DrawerWrapper
    footer={<span />}
  >
    <Drawer
      footer={<span />}
      prefixCls="ant-drawer"
    >
      <DrawerWrapper
        afterVisibleChange={[Function]}
        className=""
        defaultOpen={false}
        duration=".3s"
        ease="cubic-bezier(0.78, 0.14, 0.15, 0.86)"
        forceRender={false}
        getContainer="body"
        handler={false}
        keyboard={true}
        level={null}
        maskClosable={true}
        maskStyle={Object {}}
        onChange={[Function]}
        placement="right"
        prefixCls="ant-drawer"
        showMask={true}
        style={
          Object {
            "transform": undefined,
            "zIndex": undefined,
          }
        }
        width={256}
        wrapperClassName=""
      >
        <PortalWrapper
          forceRender={false}
          getContainer="body"
          visible={false}
          wrapperClassName=""
        />
      </DrawerWrapper>
    </Drawer>
  </DrawerWrapper>
</Drawer>
`;

exports[`Drawer component Drawer without footer & actions block 1`] = `
<Drawer
  actions={null}
  footer={null}
>
  <DrawerWrapper
    footer={null}
  >
    <Drawer
      footer={null}
      prefixCls="ant-drawer"
    >
      <DrawerWrapper
        afterVisibleChange={[Function]}
        className=""
        defaultOpen={false}
        duration=".3s"
        ease="cubic-bezier(0.78, 0.14, 0.15, 0.86)"
        forceRender={false}
        getContainer="body"
        handler={false}
        keyboard={true}
        level={null}
        maskClosable={true}
        maskStyle={Object {}}
        onChange={[Function]}
        placement="right"
        prefixCls="ant-drawer"
        showMask={true}
        style={
          Object {
            "transform": undefined,
            "zIndex": undefined,
          }
        }
        width={256}
        wrapperClassName=""
      >
        <PortalWrapper
          forceRender={false}
          getContainer="body"
          visible={false}
          wrapperClassName=""
        />
      </DrawerWrapper>
    </Drawer>
  </DrawerWrapper>
</Drawer>
`;

exports[`Drawer component Drawer without footer block 1`] = `
<Drawer
  actions="actions"
  footer={null}
>
  <DrawerWrapper
    footer={
      <div
        className="ant-drawer-actions"
      >
        actions
      </div>
    }
  >
    <Drawer
      footer={
        <div
          className="ant-drawer-actions"
        >
          actions
        </div>
      }
      prefixCls="ant-drawer"
    >
      <DrawerWrapper
        afterVisibleChange={[Function]}
        className=""
        defaultOpen={false}
        duration=".3s"
        ease="cubic-bezier(0.78, 0.14, 0.15, 0.86)"
        forceRender={false}
        getContainer="body"
        handler={false}
        keyboard={true}
        level={null}
        maskClosable={true}
        maskStyle={Object {}}
        onChange={[Function]}
        placement="right"
        prefixCls="ant-drawer"
        showMask={true}
        style={
          Object {
            "transform": undefined,
            "zIndex": undefined,
          }
        }
        width={256}
        wrapperClassName=""
      >
        <PortalWrapper
          forceRender={false}
          getContainer="body"
          visible={false}
          wrapperClassName=""
        />
      </DrawerWrapper>
    </Drawer>
  </DrawerWrapper>
</Drawer>
`;
